--- a/src/components/StockDetails/stockDetails.css
+++ b/src/components/StockDetails/stockDetails.css
@@ -17,6 +17,15 @@
     text-overflow: ellipsis;
 }
 
+.card-body .title span{
+    /* display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical; */
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-size: 10px
+}
+
 .news-image {
     width: 90px;
 }
