--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -50,22 +50,9 @@ body {
   text-align: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.spinner-color {
+    color: #5d5ba4;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-
 .navbar {
     background-color: #2624a9;
 }
