--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -50,6 +50,15 @@ body {
   text-align: center;
 }
 
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 45px;
+    font-size: 12px;
+    background-color: #cbc9c9;
+}
+
 .spinner-color {
     color: #5d5ba4;
 }
