completed redux functionality

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -59,6 +59,10 @@ body {
     background-color: #cbc9c9;
 }
 
+.hover-pointer:hover{
+    cursor: pointer;
+}
+
 .spinner-color {
     color: #5d5ba4;
 }
