--- a/src/components/AutoComplete/autocomplete.css
+++ b/src/components/AutoComplete/autocomplete.css
@@ -8,7 +8,7 @@
 }
 
 .search-input {
-    width: 83%;
+    width: 81%;
     border: none;
     font-size: 13px;
     padding-bottom: 4px;
@@ -20,22 +20,23 @@
 }
 
 .search-btn {
-    width: 7%;
+    color: #2624a9;
+    /* width: 7%; */
     /* padding-right: 15px; */
 }
 
 .search-btn img {
-    height: 13px;
+    /* height: 13px; */
 }
 
 .reset-btn {
-    width: 7%;
-    /* padding-right: 15px; */
+    color: #2624a9;
+    padding-top: 2px;
 }
 
-.reset-btn img {
-    width: 20px;
-    height: 25px;
+.reset-btn svg {
+    zoom: 1.3;
+
 }
 
 .suggestions {
