--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,6 +2,10 @@ body {
     font-family: "Roboto", "sans-serif" !important;
 }
 
+#root {
+    min-height: 100vh;
+}
+
 .ml-1 {
     margin-left: .25rem;
 }
@@ -51,8 +55,6 @@ body {
 }
 
 .footer {
-    position: absolute;
-    bottom: 0;
     width: 100%;
     height: 45px;
     font-size: 12px;
@@ -70,11 +72,16 @@ body {
     background-color: #2624a9;
 }
 
+.navbar-toggler {
+    padding: 0 5px;
+}
+
 .nav-link {
     color: white !important;
 }
 .navbar-brand {
     margin-left: 1rem;
+    font-size: 18px;
 }
 
 .navlink-selected {
@@ -85,3 +92,12 @@ body {
 .navbar-brand, .nav-link, .navbar-brand:hover,  .nav-link:hover{
     color: white;
 }
+
+.alert {
+    margin-bottom: 10px;
+    margin-top: 10px;
+    height: 42px;
+    line-height: 30px;
+    padding: 7px 15px;
+  }
+
