--- a/src/components/StockHighlight/stockhighlight.css
+++ b/src/components/StockHighlight/stockhighlight.css
@@ -9,6 +9,10 @@
     font-family: 'Roboto';
 }
 
+.company-logo {
+    min-width: 75px;
+}
+
 .exchange {
     font-weight: 300;
     font-size: 11px;
