--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -58,7 +58,7 @@ body {
     width: 100%;
     height: 45px;
     font-size: 12px;
-    background-color: #cbc9c9;
+    background-color: #cbc9c996;
 }
 
 .hover-pointer:hover{
@@ -94,9 +94,9 @@ body {
 }
 
 .alert {
-    margin-bottom: 10px;
+    /* margin-bottom: 10px;
     margin-top: 10px;
-    height: 42px;
+    height: 42px; */
     line-height: 30px;
     padding: 7px 15px;
   }
