--- a/src/components/StockHighlight/stockhighlight.css
+++ b/src/components/StockHighlight/stockhighlight.css
@@ -24,13 +24,14 @@
 }
 
 .stock-price .price {
-    font-size: 28px;
+    font-size: 27px;
     font-weight: 500;
     height: 41px;
+    line-height: 1.7;
 }
 
 .stock-price .change {
-    font-size: 16px;
+    font-size: 15px;
 }
 
 .stock-price .timestamp {
