--- a/src/components/StockDetails/stockDetails.css
+++ b/src/components/StockDetails/stockDetails.css
@@ -28,15 +28,15 @@
 } */
 
 .news-image img{
-    max-height: 150px;
+    /* max-height: 150px; */
     border-radius: 5px;
-    width: 100%
+    /* width: 100% */
 }
 
-@media(min-width: 600px) {
+/* @media(min-width: 600px) {
     .news-image img{
         height: 60px;
     }
-}
+} */
 
 
