--- a/src/components/AutoComplete/autocomplete.css
+++ b/src/components/AutoComplete/autocomplete.css
@@ -56,6 +56,10 @@
     background-color: #e1e1e1;
 }
 
+.suggestion:active {
+    background-color: #e1e1e1;
+}
+
 .suggestion {
     min-height: 35px;
     padding-left: 13px;
