--- a/src/components/AutoComplete/autocomplete.css
+++ b/src/components/AutoComplete/autocomplete.css
@@ -53,19 +53,26 @@
 }
 
 .suggestion:hover {
-    background-color: #e1e1e1;
+    background-color: #e1e1e1b0 !important;
 }
 
 .suggestion:active {
-    background-color: #e1e1e1;
+    background-color: #e1e1e1b0 !important;
 }
 
 .suggestion {
     min-height: 35px;
-    padding-left: 13px;
+    padding-left: 13px !important;
+    padding-right: 0 !important;
+    padding-top: 0px !important;
+    padding-bottom: 0px !important;
     font-size: 13px;
     /* white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis; */
     max-width: 100%;
+}
+
+.MuiTypography-root {
+    font-size: 13px !important;
 }
